# CADaver

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DeliveryReadme.txt  Dockerfile  LICENSE  README.md  VisualStudioTest.runsettings  initial.bat  vcpkg.json
Executable/: CMakeLists.txt
Executable/Source/: main.cpp
LibraryGD/: CMakeLists.txt  HelloBottleGD.cpp  HelloBottleGD.h  HelloWorld.cpp  HelloWorld.h  HelloWorldGD.cpp  HelloWorldGD.h  register_types.cpp  register_types.h
LibraryGD/Source/: CADShape.cpp  CADShape.h  register_types.cpp
LibraryGD/Source/CADShape/: CADCompSolid.cpp  CADCompSolid.h  CADCompound.cpp  CADCompound.h  CADEdge.cpp  CADEdge.h  CADFace.cpp  CADFace.h  CADShape.cpp  CADShape.h  CADShapeFactory.cpp  CADShapeFactory.h  CADShell.cpp  CADShell.h  CADSolid.cpp  CADSolid.h  CADVertex.cpp  CADVertex.h  CADWire.cpp  CADWire.h
LibraryGD/Source/Util/: CADOperation.cpp  CADOperation.h  LoadFileDialog.cpp  LoadFileDialog.h  SaveFileDialog.cpp  SaveFileDialog.h
godotProject/: Beissi.png.import  Drawing.gd  Drawing.gd.uid  Edge.tscn  Editor.tscn  HelloWorlder.gd  Hub.gd  Vertex.tscn  cad_shape.gd  camera_3d.gd  export_presets.cfg  icon.svg.import  node_2d.tscn  node_3d.tscn  path_util.gd  project.godot
godotProject/3D/: light.tscn
godotProject/3D/CADObject/: CADObject.tscn  CADVisualization.tscn  cad_object.gd  cad_visualization.gd  cad_visualization.gd.uid
godotProject/3D/CADObject/TopoHierarchy/: CADSceneFactory.gd  CADSceneFactory.gd.uid
godotProject/3D/CADObject/TopoHierarchy/CompSolid/: CompSolid.tscn  comp_solid.gd  comp_solid.gd.uid
godotProject/3D/CADObject/TopoHierarchy/Compound/: CADCompound.tscn  cad_compound.gd  cad_compound.gd.uid
godotProject/3D/CADObject/TopoHierarchy/Edge/: Edge.tscn  edge.gd  edge.gd.uid
godotProject/3D/CADObject/TopoHierarchy/Face/: Face.tscn  face.gd  face.gd.uid  face_collider.gd  face_collider.gd.uid  face_material.tres  face_material_hover.tres  face_material_select.tres
godotProject/3D/CADObject/TopoHierarchy/Shell/: Shell.tscn  shell.gd  shell.gd.uid
godotProject/3D/CADObject/TopoHierarchy/Solid/: CADSolid.tscn  cad_solid.gd  cad_solid.gd.uid
godotProject/3D/CADObject/TopoHierarchy/Vertex/: Vertex.tscn  vertex.gd  vertex.gd.uid
godotProject/3D/CADObject/TopoHierarchy/Wire/: Wire.tscn  wire.gd  wire.gd.uid
godotProject/3D/Camera/: adamviola_camera_3d.gd  arcball_camera_3d.gd  free_look_camera.tscn  main_camera.gd  main_camera.gd.uid  main_camera.tscn
godotProject/3D/Camera/Selection/: object_selection.gd  object_selection.gd.uid  selection.tscn
godotProject/3D/PreviewMesh/: PreviewMesh.tscn  preview_mesh.gd  preview_mesh.gd.uid  preview_mesh_material.tres
godotProject/3D/ViewCube/: perspective_button_pressed_style.tres  view_cube.gd  view_cube.gd.uid  view_cube.tscn  view_cube_button.gd  view_cube_button.gd.uid  view_cube_button.tscn  view_cube_button_text.tscn  view_cube_control.gd  view_cube_control.gd.uid  view_cube_control.tscn  view_cube_edge_material.tres  view_cube_edge_material_hover.tres
godotProject/Config/: Hub.gd  Hub.gd.uid  file_config.gd  file_config.gd.uid
godotProject/Experiments/Experiment1/: Edge.tscn  experiment1.tscn
godotProject/Logic/: Logic.tscn  drawings_container.gd  on_close_drawing.gd  on_load_drawing.gd  on_new_drawing.gd  on_save_drawing.gd  root_node.gd
godotProject/Scene/: light.tscn
godotProject/UI/ColorPickerPopup/: ColorPickerPopup.tscn  color_picker_popup.gd  color_picker_popup.gd.uid
godotProject/UI/ContextMenu/: context_menu.gd  context_menu.gd.uid  context_menu.tscn
godotProject/UI/DrawingScene/: DrawingScene.gd  DrawingScene.gd.uid  DrawingScene.tscn
godotProject/UI/ExtraWindow/: extra_window.gd  extra_window.gd.uid  extra_window.tscn
godotProject/UI/Hierarchy/: Hierarchy.tscn  hierarchy.gd  hierarchy.gd.uid
godotProject/UI/MainContextMenu/: main_context_menu.gd  main_context_menu.tscn
godotProject/UI/MainWindow/: MainWindow.tscn  main_window.gd  main_window.gd.uid
godotProject/UI/MenuBar/: menu_bar.gd  menu_bar.gd.uid  menu_bar.tscn  menu_bar_file.gd  menu_bar_file.gd.uid  menu_bar_view.gd  menu_bar_view.gd.uid  menu_var_view.gd
godotProject/UI/OKPopup/: OKPopoup.tscn  ok_popoup.gd  ok_popoup.gd.uid
godotProject/UI/Tabs/: tab_bar.gd  tab_bar.gd.uid  tab_bar.tscn
godotProject/UI/UnsavedChanges/: UnsavedChangesDialog.tscn  unsaved_changes_dialog.gd  unsaved_changes_dialog.gd.uid
godotProject/UI/WindowContent/: window_container.gd  window_container.gd.uid  window_content.tscn
godotProject/Util/: Selectable.gd  Selectable.gd.uid  path_util.gd.uid
libs/: CMakeLists.txt
libs/scons/: scons-4.8.1.bat
